--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                           </p>
                                           <figure><img src="assets/images/hr.gif" ></figure>
                                           <p> <a href="assets/Docs/nkhuni_student_registration_form_2016.pdf" download="Nkhuni Student Registration Form">Download Student Registration Form</a></p>
+                                          <p> <a href="assets/Docs/DOC-20161207-WA0001.pdf" download="Nkhuni Student Application Form">APPLICATION FORM FOR STUDENTS ENROLMENT</a></p>
+                                          <p> <a href="assets/Docs/DOC-20161207-WA0002.pdf" download="2016/2017 Academic Year January 2017 Enrolment">2016/2017 Academic Year January 2017 Enrolment</a></p>
                                       </div>
                                 </div>
                             </div>
@@ -393,9 +395,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				loader: 'false',
 				pagination: true,
 				thumbnails: false,
-				hover: false,
-                playPause: false,
-                navigation: false,
+				hover: true,
+                playPause: true,
+                navigation: true,
 				opacityOnGrid: false,
 				imagePath: 'assets/images/'
 			});
