added downloads and content

--- a/index.html
+++ b/index.html
@@ -117,10 +117,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
       <section class="news-box top-margin">
         <div class="container">
-            <h4 ><span> <strong> IN THE NEWS </strong></span></h4>
+            <span> <strong> IN THE NEWS </strong></span>
             <hr>
-            <div class="row">
+						<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12">
+							<i>Nkhoma University (NKHUNI) is a registered and accredited institution of higher learning that offers degrees, diplomas and certificates from the programmes that have been accredited by the Government of Malawi through the National Council of Higher Education. </i>
+							</div>
 
+						</div>
+            <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="newsBox">
                         <div class="thumbnail">
@@ -144,9 +149,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="caption maxheight2">
                                 <div class="box_inner">
                                       <div class="box">
-                                          <p class="title"><h5 style="color: #3d84e6"> <strong> New Intake </strong> </h5></p>
+                                          <p class="title"><h5 style="color: #3d84e6"> <strong> Admission Policy </strong> </h5></p>
                                           <figure><img src="assets/images/hr.gif" ></figure>
-                                          <p> Nkhoma University released the names of successful candidates for the 2016/2017 intake </p>
+                                          <p> Nkhoma University is open to students of all faiths and respects academic freedom and freedom of thought and expression within the basic tenets of the Christian faith. </p>
                                       </div>
                                 </div>
                             </div>
@@ -164,7 +169,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                           </p>
                                           <figure><img src="assets/images/hr.gif" ></figure>
                                           <p> <a href="assets/Docs/nkhuni_student_registration_form_2016.pdf" download="Nkhuni Student Registration Form">Download Student Registration Form</a></p>
-                                          <p> <a href="assets/Docs/DOC-20161207-WA0001.pdf" download="Nkhuni Student Application Form">APPLICATION FORM FOR STUDENTS ENROLMENT</a></p>
+                                          <p> <a href="assets/Docs/DOC-20161207-WA0001.pdf" download="Nkhuni Student Application Form">Application Form For Students Enrolment</a></p>
                                           <p> <a href="assets/Docs/DOC-20161207-WA0002.pdf" download="2016/2017 Academic Year January 2017 Enrolment">2016/2017 Academic Year January 2017 Enrolment</a></p>
                                       </div>
                                 </div>
@@ -181,20 +186,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
       <section class="container">
       <div class="row">
-      	<div class="col-md-8"><div class="title-box clearfix "><h4 class="title-box_primary" style=""><strong> About Us</strong></h4></div>
-        <p><span>Nkhoma University was successfully registered by the Registrar’s office of the Government of Malawi in 2011. It is a private Christian University with a constitution and charter. </span></p>
-        <p>The University is owned by the Church of Central Africa Presbyterian (CCAP) of the Nkhoma Synod. It is open to students of all faiths, and respects academic freedom and freedom of thought and expression within the basic tenets of the Christian faith. </p><p>The establishment of this university was largely premised on the need to advance Christianity, education and health to the tertiary level.</p>
-        <a href="views/about.html" title="read more" class="btn-inline " target="_self">read more</a> </div>
+      	<div class="col-md-4"><div class="title-box clearfix "><h5 class="title-box_primary" style="color: #3d84e6"><strong> Mission statement </strong></h5></div>
+        <p>The mission of Nkhoma University is to provide an opportunity for learning to students, enabling them to understand the academic disciplines in a very professional manner and be inspired by the Word of God with its implications for living, character building and service in all God honoring vocations.</p>
+
+			</div>
+
+			<div class="col-md-4"><div class="title-box clearfix "><h5 class="title-box_primary" style="color: #3d84e6"><strong> Vision statement </strong></h5></div>
+			<p align="justified">The University will provide education, training, research and related services locally,nationally and internationally to support and advance the social, cultural, intellectual and economic development of Malawi</p>
+
+		</div>
 
 
-          <div class="col-md-4"><div class="title-box clearfix "><h4 class="title-box_primary"> <strong> Courses </strong></h4></div>
+          <div class="col-md-4"><div class="title-box clearfix "><h4 class="title-box_primary"> <strong> Quick Links </strong></h4></div>
             <div class="list styled custom-list">
             <ul>
-            <li><a title="Mathematics and Computer Science" href="#">Mathematics and Computer Science</a></li>
-            <li><a title="Languages and Religious" href="#">Languages and Religious</a></li>
-            <li><a title="Environmental Studies" href="#">Environmental Studies</a></li>
-            <li><a title="Commerce" href="#">Commerce</a></li>
-            <li><a title="Nursing and Midwifery" href="#">Nursing and MidWifery</a></li>
+						<li><a title="students enrolment" href="#" style="color: #8595c6">  2016/2017 Academic Year January 2017 Enrolment </a></li>
+            <li><a title="Registrar's office" href="#" style="color: #8595c6">Registrar's Office</a></li>
+            <li><a title="Academic Departments" href="#" style="color: #8595c6">Academic Departments</a></li>
+            <li><a title="Job Opportunities" href="#" style="color: #8595c6">Job Opportunities</a></li>
+            <li><a title="Students Portal" href="#" style="color: #8595c6">Students Portal</a></li>
             </ul>
             </div>
          </div>
